prox-man/prox-man.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: prox-man
  name: prox-man
spec:
  containers:
  - image: jc21/nginx-proxy-manager:latest
    name: prox-man
    ports:
    - containerPort: 443
    - containerPort: 80
    - containerPort: 81
    resources: {}
    volumeMounts:
    - name: server-storage
      mountPath: /data
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: server-storage
    persistentVolumeClaim:
     claimName: prox-man-pvc
status: {}
